new changes done

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <title>Page Title</title>
 <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
-<body >
+<body>
+<div>
+<div class="card_align">	
 <div class="card_design">
 	<img src="./college.jpg">
 	<div class="adjacent_text">
@@ -43,7 +45,8 @@
 	</div>
 	</div>
 </div>
-
+</div>
+<div class="card_align">
 <div class="card_design">
 	<img src="./college.jpg">
 	<div class="adjacent_text">
@@ -81,7 +84,8 @@
 		<h5 class="blue_text">Free Cancellation . Free Wi-Fi</h5>
 	</div>
 	</div>
+	</div>
+	</div>
 </div>
-
 </body>
 </html>
