new modification in cards design

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<h6>Near Vishwavidyaliya Metro Station |<span class="grey_text"> 2 Kms away from bus stand</span> </h6>
 	<h6><span class="blue_text">93% Match :</span> 2.5kms <span class="grey_text">from GTB Nagar</span> , 7 kms <span class="grey_text">from Rajiv Chowk</span></h6>
 	<div class="light_strip">
-		<h6>Flat <span class="blue_text">Rs2,000</span> off + upto <span class="blue_text">Rs 500</span> wallet! to avail... <span class="darkblue_text">LOGIN</span></h6> 
+		<h6>Flat <span class="darkblue_text">Rs2,000</span> off + upto <span class="darkblue_text">Rs 500</span> wallet! to avail... <span class="darkblue_text">LOGIN</span></h6> 
 	</div>
 	</div>
 	<div>
@@ -34,7 +34,26 @@
 	<h6>Near Vishwavidyaliya Metro Station |<span class="grey_text"> 2 Kms away from bus stand</span> </h6>
 	<h6><span class="blue_text">93% Match :</span> 2.5kms <span class="grey_text">from GTB Nagar</span> , 7 kms <span class="grey_text">from Rajiv Chowk</span></h6>
 	<div class="light_strip">
-		<h6>Flat <span class="blue_text">Rs2,000</span> off + upto <span class="blue_text">Rs 500</span> wallet! to avail... <span class="darkblue_text">LOGIN</span></h6> 
+		<h6>Flat <span class="darkblue_text">Rs2,000</span> off + upto <span class="darkblue_text">Rs 500</span> wallet! to avail... <span class="darkblue_text">LOGIN</span></h6> 
+	</div>
+	</div>
+	<div>
+		<h6 class="grey_text">Rs 6,8756</h6>
+		<h4 class="red_text">Rs 5,768</h4>
+		<h6>Per Semester (3 Months)</h6>
+		<h5 class="blue_text">Free Cancellation . Free Wi-Fi</h5>
+	</div>
+	</div>
+</div>
+<div class="card_design">
+	<img src="./college.jpg">
+	<div class="adjacent_text">
+	<div>
+	<h5>Hansraj College Delhi University <span>*****</span></h5>
+	<h6>Near Vishwavidyaliya Metro Station |<span class="grey_text"> 2 Kms away from bus stand</span> </h6>
+	<h6><span class="blue_text">93% Match :</span> 2.5kms <span class="grey_text">from GTB Nagar</span> , 7 kms <span class="grey_text">from Rajiv Chowk</span></h6>
+	<div class="light_strip">
+		<h6>Flat <span class="darkblue_text">Rs2,000</span> off + upto <span class="darkblue_text">Rs 500</span> wallet! to avail... <span class="darkblue_text">LOGIN</span></h6> 
 	</div>
 	</div>
 	<div>
@@ -55,7 +74,7 @@
 	<h6>Near Vishwavidyaliya Metro Station |<span class="grey_text"> 2 Kms away from bus stand</span> </h6>
 	<h6><span class="blue_text">93% Match :</span> 2.5kms <span class="grey_text">from GTB Nagar</span> , 7 kms <span class="grey_text">from Rajiv Chowk</span></h6>
 	<div class="light_strip">
-		<h6>Flat <span class="blue_text">Rs2,000</span> off + upto <span class="blue_text">Rs 500</span> wallet! to avail... <span class="darkblue_text">LOGIN</span></h6> 
+		<h6>Flat <span class="darkblue_text">Rs2,000</span> off + upto <span class="darkblue_text">Rs 500</span> wallet! to avail... <span class="darkblue_text">LOGIN</span></h6> 
 	</div>
 	</div>
 	<div>
@@ -74,7 +93,7 @@
 	<h6>Near Vishwavidyaliya Metro Station |<span class="grey_text"> 2 Kms away from bus stand</span> </h6>
 	<h6><span class="blue_text">93% Match :</span> 2.5kms <span class="grey_text">from GTB Nagar</span> , 7 kms <span class="grey_text">from Rajiv Chowk</span></h6>
 	<div class="light_strip">
-		<h6>Flat <span class="blue_text">Rs2,000</span> off + upto <span class="blue_text">Rs 500</span> wallet! to avail... <span class="darkblue_text">LOGIN</span></h6> 
+		<h6>Flat <span class="darkblue_text">Rs2,000</span> off + upto <span class="darkblue_text">Rs 500</span> wallet! to avail... <span class="darkblue_text">LOGIN</span></h6> 
 	</div>
 	</div>
 	<div>
@@ -85,7 +104,27 @@
 	</div>
 	</div>
 	</div>
+<div class="card_design">
+	<img src="./college.jpg">
+	<div class="adjacent_text">
+	<div>
+	<h5>Hansraj College Delhi University <span>*****</span></h5>
+	<h6>Near Vishwavidyaliya Metro Station |<span class="grey_text"> 2 Kms away from bus stand</span> </h6>
+	<h6><span class="blue_text">93% Match :</span> 2.5kms <span class="grey_text">from GTB Nagar</span> , 7 kms <span class="grey_text">from Rajiv Chowk</span></h6>
+	<div class="light_strip">
+		<h6>Flat <span class="darkblue_text">Rs2,000</span> off + upto <span class="darkblue_text">Rs 500</span> wallet! to avail... <span class="darkblue_text">LOGIN</span></h6> 
 	</div>
+	</div>
+	<div>
+		<h6 class="grey_text">Rs 6,8756</h6>
+		<h4 class="red_text">Rs 5,768</h4>
+		<h6>Per Semester (3 Months)</h6>
+		<h5 class="blue_text">Free Cancellation . Free Wi-Fi</h5>
+	</div>
+	</div>
+</div>
+</div>
+
 </div>
 </body>
 </html>
